examples/kubernetes/038-istio-03-basic/devops-istio-basic-deployment-1.0.0.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devops

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: istio-basic-deployment-blue
spec:
  selector:
    matchLabels:
      app: istio-basic-blue
  template:
    metadata:
      labels:
        app: istio-basic-blue
        version: 1.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8111"
        prometheus.io/path: /devops/blue/actuator/prometheus
    spec:
      containers:
        - name: devops-blue
          image: npantelic/devops-blue:1.0.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.02"
              memory: 32Mi
            limits:
              cpu: "0.3"
              memory: 384Mi
          ports:
            - name: http
              containerPort: 8111
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /devops/blue/actuator/health/readiness
              port: 8111
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /devops/blue/actuator/health/liveness
              port: 8111
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
  replicas: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: istio-basic-deployment-yellow
spec:
  selector:
    matchLabels:
      app: istio-basic-yellow
  template:
    metadata:
      labels:
        app: istio-basic-yellow
        version: 1.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8112"
        prometheus.io/path: /devops/yellow/actuator/prometheus
    spec:
      containers:
        - name: devops-yellow
          image: npantelic/devops-yellow:1.0.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.02"
              memory: 32Mi
            limits:
              cpu: "0.3"
              memory: 384Mi
          ports:
            - name: http
              containerPort: 8112
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /devops/yellow/actuator/health/readiness
              port: 8112
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /devops/yellow/actuator/health/liveness
              port: 8112
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
  replicas: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: istio-basic-deployment-white
spec:
  selector:
    matchLabels:
      app: istio-basic-white
  template:
    metadata:
      labels:
        app: istio-basic-white
        version: 1.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8113"
        prometheus.io/path: /devops/white/actuator/prometheus
    spec:
      containers:
        - name: devops-white
          image: npantelic/devops-white:1.0.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.02"
              memory: 32Mi
            limits:
              cpu: "0.3"
              memory: 384Mi
          ports:
            - name: http
              containerPort: 8113
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /devops/white/actuator/health/readiness
              port: 8113
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /devops/white/actuator/health/liveness
              port: 8113
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
  replicas: 1

---
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-blue-clusterip
  labels:
    app: istio-basic-blue
spec:
  selector:
    app: istio-basic-blue
  ports:
    - port: 8111
      name: http

---
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-yellow-clusterip
  labels:
    app: istio-basic-yellow
spec:
  selector:
    app: istio-basic-yellow
  ports:
    - port: 8112
      name: http

---
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-white-clusterip
  labels:
    app: istio-basic-white
spec:
  selector:
    app: istio-basic-white
  ports:
    - port: 8113
      name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: devops
  name: ingress-istio-basic-nginx-blue
  labels:
    app.kubernetes.io/name: ingress-istio-basic-nginx-blue
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /devops/blue
            pathType: Prefix
            backend:
              service:
                name: devops-blue-clusterip
                port:
                  number: 8111
